# vehicle-fleet-poc

./: .gitignore  README.md  compose.yaml  config.yaml  package-lock.json
.docker/: nodejs.Dockerfile  nodejs.Dockerfile.dockerignore
deployment/grafana/: nats.json  vehicles.json
deployment/kubernetes/: main.test.ts  main.ts  nats-service.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
event-collector/nodejs/: README.md  package-lock.json  package.json
event-collector/nodejs/src/: main.ts
event-estimator/: README.md  estimate.py  requirements.txt
event-finder/nodejs/: README.md  package-lock.json  package.json  tsconfig.json
event-finder/nodejs/src/: main.ts
event-finder/rust/: Cargo.toml  README.md  build.rs
event-finder/rust/src/: config.rs  contexts.rs  main.rs  types.rs
event-finder/rust/src/handlers/: mod.rs  ping.rs  search.rs
event-finder/rust/src/proto/: types.proto
event-finder/rust/src/utils/: df.rs  errors.rs  geo.rs  messaging.rs  mod.rs  time.rs
event-generator/nodejs/: package-lock.json  package.json  tsconfig.json
event-generator/nodejs/src/: engine.ts  main.ts  types.ts  utils.ts
event-hub/: Dockerfile  README.md  config.txt
event-querier/nodejs/: package-lock.json  package.json
event-querier/nodejs/src/: main.ts
event-viewer/web/nuxt/: app.vue  nuxt.config.ts  (+2 more)
scripts/: requirements.txt
scripts/nodejs/: build-and-start.py  cleanup.sh  docker-build.sh  docker-publish.sh  docker-run.sh  install.sh  kill-all.sh  regen-proto.sh  start.py  start.sh  update-deps.sh
scripts/rust/: install.sh
(+173 files in other folders)
