[package]
name = "event-finder"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
datafusion = "49.0.0"
futures-util = "0.3.31"
tokio = { version = "1", features = ["full"] }
async-nats = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geojson = "0.24"
geo = "0.28"
geohash = "0.13"
prost = "0.14"
actix-web = "4"
actix-web-prom = "0.10.0"
prometheus = "=0.14.0"
url = "2.5.7"
anyhow = "1.0.99"

[dependencies.uuid]
version = "1.18.0"
# Lets you generate random UUIDs
features = [
    "v4",
]

[build-dependencies]
prost-build = "0.14.1"
